# eve-wrench-app

./: .prettierignore  README.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: format.yml  release.yml
src/: App.vue  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: esi.rs  evesettings.rs  lib.rs  main.rs
src/components/: AccountItem.vue  BackupItem.vue  ConfirmDialog.vue  CopyPanel.vue  ImportDialog.vue  ProfileCard.vue  PromptDialog.vue  ServerSection.vue  SettingsBrowser.vue  SettingsItem.vue  TitleBar.vue  UpdateModal.vue
src/components/ui/alert-dialog/: AlertDialog.vue  AlertDialogContent.vue
src/components/ui/badge/: index.ts
src/components/ui/button/: index.ts
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  DropdownMenuContent.vue  DropdownMenuItem.vue  DropdownMenuRadioGroup.vue  DropdownMenuRadioItem.vue  DropdownMenuSub.vue  DropdownMenuSubContent.vue
src/components/ui/input/: Input.vue
src/components/ui/scroll-area/: ScrollBar.vue
src/components/ui/separator/: Separator.vue
src/components/ui/sonner/: Sonner.vue
src/components/ui/table/: TableEmpty.vue  TableHead.vue
src/components/ui/tabs/: TabsTrigger.vue
src/components/ui/tooltip/: Tooltip.vue  TooltipContent.vue
src/composables/: useConfirm.ts  useCopyManager.ts  useI18n.ts  usePrompt.ts
src/locales/: en.ts  index.ts  zh.ts
